ocp/spring-boot-sample-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-sample
  namespace: qdoc-dev-axa-kt-th
spec:
  selector:
    app: spring-boot-sample
    deployment: spring-boot-sample
  ports:
    - name: spring-boot-sample-tcp-8083
      protocol: TCP
      port: 8083
      targetPort: 8083
