ocp/spring-boot-sample-route-2.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: spring-boot-sample
  namespace: qdoc-dev-axa-kt-th
  labels:
    app: spring-boot-sample
    app.kubernetes.io/component: spring-boot-sample
    app.kubernetes.io/instance: spring-boot-sample
    app.kubernetes.io/name: spring-boot-sample
    app.kubernetes.io/part-of: Q-DOC
    app.openshift.io/runtime-version: '7.7'
    router: internal
spec:
  host: >-
    spring-boot-sample-qdoc-dev-axa-kt-th.axa-kt-th-preprod-mpl-int.scarlet.ap-southeast-1.aws.openpaas.axa-cloud.com
  to:
    kind: Service
    name: spring-boot-sample
    weight: 100
  port:
    targetPort: spring-boot-sample-tcp-8083
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
